@startuml
set namespaceSeparator ::

class "vscodesetup::src::app.dart::MyApp" {
  +SettingsController settingsController
  +Widget build()
}

"vscodesetup::src::app.dart::MyApp" o-- "vscodesetup::src::controllers::settings_controller.dart::SettingsController"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "vscodesetup::src::app.dart::MyApp"

class "vscodesetup::src::controllers::settings_controller.dart::SettingsController" {
  -SettingsService _settingsService
  -ThemeMode _themeMode
  +ThemeMode themeMode
  +Future<void> loadSettings()
  +Future<void> updateThemeMode()
}

"vscodesetup::src::controllers::settings_controller.dart::SettingsController" o-- "vscodesetup::src::services::settings_service.dart::SettingsService"
"vscodesetup::src::controllers::settings_controller.dart::SettingsController" o-- "flutter::src::material::app.dart::ThemeMode"
"flutter::src::foundation::change_notifier.dart::ChangeNotifier" <|-- "vscodesetup::src::controllers::settings_controller.dart::SettingsController"

class "vscodesetup::src::features::sample::sample_item_details_view.dart::SampleItemDetailsView" {
  {static} +String routeName
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "vscodesetup::src::features::sample::sample_item_details_view.dart::SampleItemDetailsView"

class "vscodesetup::src::features::sample::sample_item_list_view.dart::SampleItemListView" {
  {static} +String routeName
  +List<SampleItem> items
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "vscodesetup::src::features::sample::sample_item_list_view.dart::SampleItemListView"

class "vscodesetup::src::features::settings::settings_view.dart::SettingsView" {
  {static} +String routeName
  +SettingsController controller
  +Widget build()
}

"vscodesetup::src::features::settings::settings_view.dart::SettingsView" o-- "vscodesetup::src::controllers::settings_controller.dart::SettingsController"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "vscodesetup::src::features::settings::settings_view.dart::SettingsView"

class "vscodesetup::src::models::sample_item.dart::SampleItem" {
  +int id
}

class "vscodesetup::src::services::settings_service.dart::SettingsService" {
  +Future<ThemeMode> themeMode()
  +Future<void> updateThemeMode()
}


@enduml